@@ -40,6 +40,7 @@
                         --add-opens litebridge.orm/org.litebridge.orm.api.select.impl=litebridge.commons
                         --add-opens litebridge.orm/org.litebridge.orm.api.select.impl=ALL-UNNAMED
                         --add-opens litebridge.orm/org.litebridge.orm.persistence=litebridge.commons
+                        --add-opens litebridge.orm/org.litebridge.orm.e2e.setup=ALL-UNNAMED
                         --add-opens litebridge.orm/org.litebridge.orm.e2e.basic.dto=litebridge.commons
                         --add-opens litebridge.orm/org.litebridge.orm.e2e.basic.dto=litebridge.tracking
                         --add-opens litebridge.orm/org.litebridge.orm.e2e.compositepk.dto=litebridge.commons
@@ -82,13 +83,28 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.litebridge.db</groupId>
+            <artifactId>litebridge-db-oracle</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-oracle</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc17</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -104,6 +120,16 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-oracle-xe</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
